# privexbot

./: .dockerignore  .env.prod.example  .gitignore  .prettierignore  ARCHITECTURE.md  BACKEND-FIX-CORRECTED.md  BACKEND-FIX-IMPLEMENTED.md  BACKEND-FIX-REQUIRED.md  BACKEND-TESTING-AND-CONFIGURATION-SUMMARY.md  CLAUDE.md  COMPLETE_ARCHITECTURE_EXPLAINED.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCKER_HUB_GUIDE.md  DOCKER_PRODUCTION.md  DOCKER_PRODUCTION_SETUP_SUMMARY.md  DOCKER_SETUP.md  ENVIRONMENT-CONFIGURATION-GUIDE.md  FRONTEND-BACKEND-IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION-SUMMARY.md  INVITATION-SYSTEM-IMPLEMENTATION.md  PRODUCTION_FILES_TREE.md  PRODUCTION_QUICK_REFERENCE.md  QUICK_DEPLOY_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
backend/: .env.dev.example  .env.example  .env.secretvm  .env.secretvm.example  CLEANUP_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.secret  EXECUTION_SUMMARY.md  FINAL_FIX_SUMMARY.md  ORGANIZATION-RECOVERY-ARCHITECTURE.md  PGADMIN_FIX.md  README.md  SECRETVM_DIAGNOSTICS_REPORT.md  SECRETVM_FINAL_SUMMARY.md  SECRETVM_FIX_GUIDE.md  SECRETVM_READY_TO_DEPLOY.md  docker-compose.dev.yml  docker-compose.scrt copy.yml  docker-compose.scrt.yml  docker-compose.secretvm copy 2.yml  docker-compose.secretvm.yml  docker-compose.yml  pyproject.toml  test_add_member.json  test_add_workspace_member.json  test_adr36.py  test_create_org.json  (+18 more)
(+350 files in other folders)
