[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "celery[redis]>=5.4.0",
    "fastapi>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.1.1",
    "redis>=5.0.0,<6.0.0",
    "sqlalchemy>=2.0.43",
]
